# FileSearchEngineSystem

./: ARCHITECTURE.md  CHANGELOG.md  README.md
backend/: CMakeLists.txt
backend/include/cache/: cache_generator.hpp  cached-search-service.hpp
backend/include/config/: config.hpp
backend/include/controller/: CrawlServiceController.hpp  FileOpenController.hpp  IController.hpp  SearchServiceController.hpp  crawl-service-controller.hpp  file-open-controller.hpp  logger-controller.hpp  query-suggestions-controller.hpp  search-service-controller.hpp
backend/include/database/: database.hpp
backend/include/filters/: AccessTimeFilter.hpp  ContentFilter.hpp  FilterField.hpp  IFilter.hpp  MimeTypeFilter.hpp  PathNameFilter.hpp  QueryParser.hpp  SizeFilter.hpp  access-time-filter.hpp  content-filter.hpp  filter-field.hpp  ifilter.hpp  mime-type-filter.hpp  path-name-filter.hpp  query-parser.hpp  size-filter.hpp
backend/include/indexer/: file-crawler.hpp  file-ignorer.hpp  index-builder.hpp
backend/include/logger/: html-logger-strategy.hpp  ilogger.hpp  logger-manager.hpp  logger.hpp  text-logger-strategy.hpp
backend/include/model/: file.hpp
backend/include/observers/: iobserver.hpp  results-history.hpp  search-history.hpp
backend/include/query-widget-analyzer/: file-widget.hpp  query-widget-factory.hpp  query-widget.hpp  university-widget.hpp
backend/include/service/: insert-service.hpp  (+4 more)
backend/src/: main.cpp
backend/tests/: file-model-test.cpp  file-ranking-test.cpp  file-score-test.cpp  query_parser_test.cpp  test_main.cpp  test_utils.hpp
(+96 files in other folders)
